# rust-pub-sub

./: .gitignore  Cargo.toml  README.md
docs/: aggregator.md  auth_service.md  consumer.md  mind_map.md  publisher.md  timeline.md
src/: auth_service.rs  consumer.rs  main.rs  publisher.rs  types.rs
